Tue Nov 13 02:55:44 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_replicate.cc: Use '++' instead of '+= 1'.  Drop superfluous
	  'return;' at end of function returning void.

Tue Nov 13 01:12:33 GMT 2012  Olly Betts <olly@survex.com>

	* tests/harness/unixcmds.cc: Tweak to avoid default initialisation of
	  string.

Mon Nov 12 23:25:14 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/unicode.h: GCC 4.6.3 doesn't optimise the asr idion
	  either.  Add links to the PR I filed and the GCC documentation that
	  signed right shift does sign extension.

Mon Nov 12 10:21:19 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/unicode.h,unicode/tclUniData.cc: Update Unicode
	  character database to 6.2.0.
	* tests/api_unicode.cc: Add tests for U+20BA, added in 6.2.0.

Sat Nov 10 05:39:16 GMT 2012  Olly Betts <olly@survex.com>

	* api/leafpostlist.cc,matcher/multiandpostlist.cc: Improved fix for
	  #590 - count all matching LeafPostList objects with a Weight object
	  rather than trying to prune at the MultiAndPostList level based on
	  max_wt (if wdf is always zero for a term, BM25 gives max_wt of 0,
	  which leads to us never counting that subquery.
	* tests/api_percentages.cc: Add regression test topercent7.

Fri Nov 09 04:25:32 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_percentages.cc: Note bug number in regression test for
	  #590.

Tue Nov 06 22:42:31 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_table.cc: Restore two missing lines in database
	  checking where we report a block with the wrong level.

Tue Oct 16 11:19:42 GMT 2012  Olly Betts <olly@survex.com>

	* api/compactor.cc,backends/dbcheck.cc,backends/dbfactory.cc,
	  common/Makefile.mk: Fix to build when configured with
	  --disable-backend-brass --disable-backend-chert.  (ticket#586)

Mon Oct 15 04:07:30 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING: automake 1.12.4 is now used to generate snapshots and
	  releases.
